  introduced IndexSearcher#search(LeafReaderContextPartition[], Weight, Collector). (Luca Cavanna)

* GITHUB#13779:  First-class random access API for KnnVectorValues
  unifies Byte/FloatVectorValues incorporating RandomAccess* API and introduces
  DocIndexIterator for iterative access in place of direct inheritance from DISI. (Michael Sokolov)

New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

* GITHUB-12767: Add a flag to enable executing using NFA in RegexpQuery. (Patrick Zhai)

* LUCENE-10626 Hunspell: add tools to aid dictionary editing:
  analysis introspection, stem expansion and stem/flag suggestion (Peter Gromov)

* GITHUB#12829: For indices newly created as of 10.0.0 onwards, IndexWriter preserves document blocks indexed via
  IndexWriter#addDocuments or IndexWriter#updateDocuments also when index sorting is configured. Document blocks are
  maintained alongside their parent documents during sort and merge. IndexWriterConfig now requires a parent field to be
  specified if index sorting is used together with document blocks. (Simon Willnauer)

* GITHUB#13233: Add RomanianNormalizationFilter (Trey Jones, Robert Muir)

* GITHUB#13449: Sparse index: optional skip list on top of doc values which is exposed via the
  DocValuesSkipper abstraction. A new flag is added to FieldType.java that configures whether
  to create a "skip index" for doc values. (Ignacio Vera)

* GITHUB#13563: Add levels to doc values skip index. (Ignacio Vera)

* GITHUB#13597: Align doc value skipper interval boundaries when an interval contains a constant
  value. (Ignacio Vera)

* GITHUB#13604: Add Kmeans clustering on vectors (Mayya Sharipova, Jim Ferenczi, Tom Veasey)

* GITHUB#13592: Take advantage of the doc value skipper when it is primary sort in SortedNumericDocValuesRangeQuery
  and SortedSetDocValuesRangeQuery. (Ignacio Vera)
