@@ -37,6 +37,13 @@ public class IndriDirichletSimilarity extends LMSimilarity {
   /** The &mu; parameter. */
   private final float mu;
 
+  /** Instantiates the similarity with the provided parameters. */
+  public IndriDirichletSimilarity(
+      CollectionModel collectionModel, boolean discountOverlaps, float mu) {
+    super(collectionModel, discountOverlaps);
+    this.mu = mu;
+  }
+
   /** Instantiates the similarity with the provided &mu; parameter. */
   public IndriDirichletSimilarity(CollectionModel collectionModel, float mu) {
     super(collectionModel);
